awsEndPoint は常設でいいやというお気持ち

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -43,6 +43,12 @@
         </div>
         <div>
             <label>
+                AWS Endpoint:
+                <input type="text" id="awsEndpoint"/>
+            </label>
+        </div>
+        <div>
+            <label>
                 Connection:
                 <button id="connectButton" type="button" disabled>Connect</button>
                 /
@@ -51,15 +57,6 @@
         </div>
         <div>
             <p id="connectionStatus"></p>
-        </div>
-    </section>
-    <section>
-        <h2>Debug Settings</h2>
-        <div>
-            <label>
-                AWS Endpoint:
-                <input type="text" id="debugAwsEndpoint"/>
-            </label>
         </div>
     </section>
 </form>
